--- a/musindex-frontend-web/templates/index.html
+++ b/musindex-frontend-web/templates/index.html
@@ -1,10 +1,73 @@
 {% extends "layout.html" %}
 {% block title %}首页{% endblock %}
+
 {% block content %}
-<div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+
+    <script type="text/javascript">
+      /*!
+       * Create an array of word objects, each representing a word in the cloud
+       */
+      var word_array = [
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Lorem", weight: 15},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Ipsum", weight: 9, link: "http://jquery.com/"},
+          {text: "Dolor", weight: 6, html: {title: "I can haz any html attribute"}},
+          {text: "Dolor", weight: 6, html: {title: "I can haz any html attribute"}},
+          {text: "Dolor", weight: 6, html: {title: "I can haz any html attribute"}},
+          {text: "Dolor", weight: 6, html: {title: "I can haz any html attribute"}},
+          {text: "Dolor", weight: 6, html: {title: "I can haz any html attribute"}},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Sit", weight: 7},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          {text: "Amet", weight: 5},
+          // ...as many words as you want
+      ];
+
+      $(function() {
+        // When DOM is ready, select the container element and call the jQCloud method, passing the array of words as the first argument.
+        $("#example").jQCloud(word_array);
+      });
+    </script>
+<!--
+<div id="example" class="jumbotron">
+<div id="example" style="width: 550px; height: 350px;">
+-->
+<div id="example" class="jumbotron" style="height: 350px;">
 </div>
 {% endblock %}
 
