--- a/musindex-frontend-web/templates/layout.html
+++ b/musindex-frontend-web/templates/layout.html
@@ -9,6 +9,10 @@
 <!-- Bootstrap -->
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap-3.2.0-dist/css/bootstrap.min.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap-3.2.0-dist/css/bootstrap-theme.min.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='jqplugin/jqcloud.css') }}">
+<style type="text/css">
+body { padding-top: 50px; }
+</style>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,12 +20,19 @@
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="{{ url_for('static', filename='jquery-1.11.1.min.js') }}"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{{ url_for('static', filename='bootstrap-3.2.0-dist/js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='jqplugin/jqcloud-1.0.4.min.js') }}"></script>
+
 </head>
 <body>
 <!-- Banner -->
 <!-- NavBar -->
 <header class="navbar-static-top bs-docs-nav" id="top" role="banner">
-    <nav class="navbar navbar-default navbar-inverse" role="navigation">
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -35,8 +46,14 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li ><a href="#">歌名</a></li>
+                    <li ><a href="#">歌手</a></li>
+                    <li ><a href="#">专辑</a></li>
+                    <li class="active"><a href="#">标签</a></li>
+                </ul>
+                <form class="navbar-form navbar-left" role="search">
                     <div class="input-group">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">所有 <span class="caret"></span></button>
@@ -50,43 +67,30 @@
                             </ul>
                         </div><!-- /btn-group -->
                         <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Go!</button>
+                        </span>
                     </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="nav navbar-nav navbar-left" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li ><a href="#">歌名</a></li>
-                    <li ><a href="#">歌手</a></li>
-                    <li ><a href="#">专辑</a></li>
-                    <li class="active"><a href="#">标签</a></li>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">登录</a></li>
+                    <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                    </li>
                 </ul>
-            </div>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
-                <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                </ul>
-                </li>
-            </ul>
+            </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 </header>
 
 <div id="content">{% block content %}{% endblock %}</div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="{{ url_for('static', filename='jquery-1.11.1.min.js') }}"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{{ url_for('static', filename='bootstrap-3.2.0-dist/js/bootstrap.min.js') }}"></script>
 </body>
 </html>
